--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.port=9090
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+
+jwt.secret=kodlamaklazim
+spring.main.allow-circular-references=true
